# tama

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  SPEC.md  TODO.md  VP_VULKANINFO_AMD_Radeon_Graphics_(RADV_REMBRANDT)_25_3_6.json  cobertura.xml  migration_summary_report.md  patch.py  patch_delta_net.py  proxy_diff.patch  rebuild_ik.bat  test_inference.py  test_path  test_zip
crates/koji-cli/: Cargo.toml
crates/koji-cli/src/: cli.rs  flags.rs  lib.rs  main.rs  service.rs
crates/koji-cli/src/commands/: backend.rs  backup.rs  mod.rs  model.rs
crates/koji-cli/src/commands/backend/: mod.rs  parse.rs
crates/koji-cli/src/commands/model/: create.rs  enable_disable.rs  list_rm.rs  migrate.rs  mod.rs  prune.rs  pull.rs  update.rs  utils.rs  verify.rs
crates/koji-cli/src/commands/tts/: config.rs  mod.rs
crates/koji-cli/src/handlers/: bench.rs  config.rs  logs.rs  mod.rs  profile.rs  run.rs  self_update.rs  serve.rs  service_cmd.rs  status.rs  web.rs
crates/koji-cli/src/handlers/server/: add.rs  edit.rs  ls.rs  mod.rs  rm.rs
crates/koji-cli/tests/: tests.rs
crates/koji-core/: Cargo.toml
crates/koji-core/src/: gpu.rs  lib.rs  logging.rs  process.rs  self_update.rs
crates/koji-core/src/backends/: mod.rs  updater.rs
crates/koji-core/src/backends/installer/: download.rs  mod.rs  prebuilt.rs  source.rs  urls.rs
crates/koji-core/src/backends/registry/: mod.rs  registry_ops.rs
crates/koji-core/src/backends/tts_kokoro/: download.rs  mod.rs  paths.rs
crates/koji-core/src/backends/tts_piper/: download.rs  mod.rs  paths.rs
crates/koji-core/src/backup/: archive.rs  manifest.rs  merge.rs  mod.rs
crates/koji-core/src/bench/: display.rs  llama_bench.rs  measure.rs  mod.rs  runner.rs
crates/koji-core/src/bench/llama_bench/: discovery.rs
crates/koji-core/src/config/: args_helpers.rs  loader.rs  migrate.rs  mod.rs  rename_legacy.rs  resolve.rs  types.rs
crates/koji-core/src/config/migrate/: mod.rs  model_to_db.rs  tests.rs
crates/koji-core/src/config/resolve/: mod.rs  tests.rs
crates/koji-core/src/db/: backfill.rs  migrations.rs  mod.rs  queries.rs
crates/koji-core/src/db/queries/: benchmark_queries.rs  download_queue_queries.rs  metrics_queries.rs  mod.rs  model_config_queries.rs  model_queries.rs  tests.rs  tts_config_queries.rs  types.rs  update_check_queries.rs
crates/koji-core/src/models/: card.rs  mod.rs  pull.rs  registry.rs  search.rs  update.rs  verify.rs
crates/koji-core/src/models/download/: mod.rs  parallel.rs
crates/koji-core/src/platform/: job_object.rs  linux.rs  mod.rs
crates/koji-core/src/platform/windows/: firewall.rs  install.rs  mod.rs  permissions.rs
crates/koji-core/src/proxy/: download_queue.rs  forward.rs  handlers.rs  koji_handlers.rs  lifecycle.rs  mod.rs  pull_jobs.rs  rename.rs  state.rs  status.rs  types.rs
crates/koji-core/src/proxy/handlers/: mod.rs  tts.rs
crates/koji-core/src/tests/: mmproj_detection_test.rs
crates/koji-core/src/updates/: checker.rs  tests.rs
crates/koji-core/test_config/: config.toml
crates/koji-kokoro/: Cargo.toml
crates/koji-kokoro/src/: lib.rs
crates/koji-tts/: Cargo.toml
crates/koji-tts/src/: config.rs  kokoro.rs  lib.rs  piper.rs  streaming.rs
crates/koji-web/: Cargo.toml  index.html  style.css
crates/koji-web/src/: api.rs  constants.rs  gpu.rs  jobs.rs  lib.rs  server.rs  utils.rs
crates/koji-web/src/api/: backends.rs  backup.rs  benchmarks.rs  downloads.rs  middleware.rs  openapi.rs  self_update.rs  updates.rs
crates/koji-web/src/components/: backend_card.rs  backends_section.rs  backup_section.rs  config_nav.rs  context_length_selector.rs  general_section.rs  install_modal.rs  job_log_panel.rs  mod.rs  modal.rs  nav.rs  pull_quant_wizard.rs  self_update_section.rs  sidebar.rs  sparkline.rs  supervisor_section.rs  toast.rs
crates/koji-web/src/pages/: api_docs.rs  backends.rs  benchmarks.rs  config_editor.rs  dashboard.rs  downloads.rs  logs.rs  mod.rs  model_editor.rs  models.rs  pull.rs  updates.rs
crates/koji-web/src/types/: config.rs
crates/koji-web/src/utils/: self_update.rs
crates/koji-web/tests/: backends_api.rs  config_structured_test.rs  css_test.rs  downloads_api.rs  server_test.rs  smoke_tests.rs
crates/kronk-cli/: Cargo.toml
crates/kronk-cli/src/: args.rs  cli.rs  flags.rs  lib.rs  main.rs  service.rs  tests.rs
crates/kronk-cli/src/commands/: backend.rs  mod.rs  model.rs
crates/kronk-cli/src/handlers/: bench.rs  config.rs  logs.rs  mod.rs  profile.rs  run.rs  serve.rs  server.rs  service_cmd.rs  status.rs  web.rs
crates/kronk-cli/tests/: tests.rs
crates/kronk-core/: Cargo.toml
crates/kronk-core/src/: config.rs  gpu.rs  lib.rs  logging.rs  process.rs  profiles.rs  proxy.rs  use_cases.rs
crates/kronk-core/src/backends/: installer.rs  mod.rs  registry.rs  updater.rs
crates/kronk-core/src/bench/: display.rs  measure.rs  mod.rs  runner.rs
crates/kronk-core/src/config/: defaults.rs  loader.rs  migrate.rs  mod.rs  resolve.rs  types.rs
crates/kronk-core/src/db/: backfill.rs  migrations.rs  mod.rs  queries.rs
crates/kronk-core/src/models/: card.rs  download.rs  mod.rs  pull.rs  registry.rs  search.rs  update.rs
crates/kronk-core/src/platform/: linux.rs  mod.rs  windows.rs
crates/kronk-core/src/proxy/: forward.rs  handlers.rs  kronk_handlers.rs  lifecycle.rs  mod.rs  process.rs  pull_jobs.rs  server.rs  state.rs  status.rs  types.rs
crates/kronk-web/: Cargo.toml  index.html  style.css
crates/kronk-web/src/: api.rs  lib.rs  main.rs  server.rs
crates/kronk-web/src/components/: mod.rs  nav.rs  sparkline.rs
crates/kronk-web/src/pages/: config_editor.rs  dashboard.rs  logs.rs  mod.rs  model_editor.rs  models.rs  pull.rs
crates/kronk-web/tests/: server_test.rs
crates/tama-cli/: Cargo.toml
crates/tama-cli/src/: cli.rs  flags.rs  lib.rs  main.rs  service.rs
crates/tama-cli/src/commands/: backup.rs  mod.rs
crates/tama-cli/src/handlers/: bench.rs  config.rs  logs.rs  mod.rs  profile.rs  run.rs  self_update.rs  serve.rs  service_cmd.rs  status.rs  web.rs
crates/tama-cli/tests/: tests.rs
(+377 files in other folders)
