[workspace]
members = [
    "crates/kronk-core",
    "crates/kronk-cli",
    "crates/kronk-mock",
]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "process", "io-util"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
directories = "5"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["stream", "native-tls"] }
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "native-tls"] }
futures-util = "0.3"
inquire = "0.7"
indicatif = "0.18"
tempfile = "3"
