[workspace]
members = [
    "crates/kronk-core",
    "crates/kronk-cli",
    "crates/kronk-mock",
    "crates/kronk-web",
]
resolver = "2"

[workspace.package]
version = "1.8.4"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "process", "io-util"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
directories = "5"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["stream", "native-tls", "json"] }
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "native-tls"] }
futures-util = "0.3"
inquire = "0.7"
indicatif = "0.18"
tempfile = "3"
url = "2"
axum = { version = "0.7", features = ["http2", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
bytes = "1.0"
http-body-util = "0.1"
rusqlite = { version = "0.34", features = ["bundled"] }
leptos = { version = "0.7", default-features = false }
leptos_router = { version = "0.7" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", default-features = false }
include_dir = "0.7"
mime_guess = "2"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
