[package]
name = "koji-core"
version = "1.21.0"
edition.workspace = true

[dependencies]
indicatif.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
directories.workspace = true
sysinfo.workspace = true
shlex = { workspace = true }
reqwest.workspace = true
hf-hub.workspace = true
futures-util.workspace = true
inquire.workspace = true
url.workspace = true
zip = "6.0"
flate2 = "1.0"
tar = "0.4"
tempfile.workspace = true
axum.workspace = true
tower-http.workspace = true
bytes.workspace = true
serde_json.workspace = true
http-body-util.workspace = true
async-stream = "0.3"
libc = "0.2.183"
rusqlite.workspace = true
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
glob = "0.3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.61", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
serde_json = "1.0.149"
tempfile.workspace = true
