[package]
name = "koji-kokoro"
version.workspace = true
edition.workspace = true

[dependencies]
espeak-rs = "0.1.9"
hound = "3.5.1"
ndarray = "0.17.2"
ndarray-npy = "0.10.0"
ort = { version = "2.0.0-rc.12", features = ["ndarray", "rocm"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.45", features = ["fs", "rt"] }
