[package]
name = "koji-web"
version = "1.16.1"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_router.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Window", "Document", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement", "EventSource", "EventSourceInit", "MessageEvent", "Event", "KeyboardEvent", "console"] }
gloo-net.workspace = true
gloo-timers.workspace = true
wasm-bindgen-futures.workspace = true
futures-util.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
url = "2.5"
# Backend-only deps (not needed for WASM, gated behind the `ssr` feature)
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
include_dir = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
koji-core = { path = "../koji-core", optional = true }
toml = { workspace = true, optional = true }

[features]
csr = []
ssr = [
  "dep:axum", "dep:tokio", "dep:anyhow", "dep:include_dir",
  "dep:reqwest", "dep:mime_guess", "dep:tracing", "dep:tracing-subscriber",
  "dep:koji-core", "dep:toml", "dep:tower-http",
]

[[test]]
name = "server_test"
path = "tests/server_test.rs"
required-features = ["ssr"]

[[test]]
name = "config_structured_test"
path = "tests/config_structured_test.rs"
required-features = ["ssr"]

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
urlencoding = "2.1"
