[package]
name = "kronk"
version.workspace = true
edition.workspace = true
description = "Local AI service manager and process supervisor"
license = "MIT"
authors = ["Daniel Cherubini <daniel@cherubini.casa>"]
repository = "https://github.com/danielcherubini/kronk"

[[bin]]
name = "kronk"
path = "src/main.rs"

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
kronk-core = { path = "../kronk-core" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest.workspace = true
directories.workspace = true
toml.workspace = true
inquire.workspace = true
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[package.metadata.deb]
maintainer = "Daniel Cherubini <daniel@cherubini.casa>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/kronk", "usr/bin/", "755"],
]
extended-description = "Kronk is a local AI service manager that wraps llama.cpp and similar backends into supervised system services with health checks, auto-restart, and easy configuration."

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/kronk", dest = "/usr/bin/kronk", mode = "755" },
]
