[package]
name = "kronk-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
directories.workspace = true
sysinfo.workspace = true
dirs = "5"
windows-service = { version = "0.8", optional = true }

[features]
windows-service = ["dep:windows-service"]
