[package]
name = "kronk-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
directories.workspace = true
sysinfo.workspace = true
reqwest.workspace = true
hf-hub.workspace = true
indicatif.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
serde_json = "1.0.149"
tempfile.workspace = true
