[package]
name = "tama"
version = "1.46.0"
edition.workspace = true
description = "Tama — local AI service manager and process supervisor"
license = "MIT"
authors = ["Daniel Cherubini <daniel@cherubini.casa>"]
repository = "https://github.com/danielcherubini/tama"

[[bin]]
name = "tama"
path = "src/main.rs"

[[test]]
name = "tests"
path = "tests/tests.rs"

[features]
default = ["web-ui"]
web-ui = ["dep:tama-web"]

[dependencies]
tama-core = { path = "../tama-core" }
tama-web = { path = "../tama-web", features = ["ssr"], optional = true }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest.workspace = true
directories.workspace = true
toml.workspace = true
inquire.workspace = true
serde_json = "1.0"
tempfile = "3"
chrono = "0.4.44"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[package.metadata.deb]
maintainer = "Daniel Cherubini <daniel@cherubini.casa>"
section = "utils"
priority = "optional"
assets = [
    ["target/release/tama", "usr/bin/", "755"],
]
extended-description = "Tama is a local AI service manager that wraps llama.cpp and similar backends into supervised system services with health checks, auto-restart, and easy configuration."

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tama", dest = "/usr/bin/tama", mode = "755" },
]
